--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">
-        Что делать, когда не можешь делать ничего.
+        Что делать, когда не можешь делать ничего
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
@@ -63,42 +63,33 @@
           <article class="card">
             <h3 class="card__title title-decor">Многозадачность</h3>
             <p class="card__text">
-              Особенно сложно сосредоточиться, когда задач много и все
-              они — важные. Где же тут сосредоточиться, когда
-              у&nbsp;тебя несколько дедлайнов на носу и
-              при этом надо не забыть сходить в аптеку и
-              ещё определиться, что ты будешь есть на ужин.
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна вам
+              (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+              просто не существует. Исследователи
+              <a
+                class="card__link"
+                href="https://www.dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </article>
           <article class="card">
             <h3 class="card__title title-decor">Дофамин</h3>
             <p class="card__text">
-              С&nbsp;каждым лайком, комментарием и уведомлением наш мозг
-              получает дофамин — вещество, которое вызывает ощущение
-              удовольствия. Получается замкнутый круг: чем больше
-              скроллишь ленту, тем больше дофамина, тем больше хочется
-              скроллить ленту. А если определённое время залипать в
-              телефон, мозг может начать требовать дофамин постоянно,
-              создавая «дофаминовую зависимость». Поэтому нам так
-              сложно начать выполнять рабочие задачи, в которых
-              нет мгновенной обратной связи в виде лайков или
-              уведомлений.
-            </p>
-          </article>
-          <article class="card">
-            <h3 class="card__title title-decor">Поток</h3>
-            <p class="card__text">
-              Состояние потока характеризуется полным погружением в
-              деятельность. Вы замечали, что когда задача по-настоящему
-              увлекает, концентрация происходит сама собой?
-            </p>
-            <p class="card__text">
-              В этом состоянии мозг полностью задействован в выполнении
-              задачи и переключать внимание для нас — огромное усилие.
-              Не удивительно, что нам сложно сосредоточиться на чём-то
-              одном, когда нас постоянно отвлекают уведомления на
-              телефоне или же мысли о том, что нужно ещё
-              сделать.
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
             </p>
           </article>
         </div>
@@ -107,59 +98,44 @@
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__cards">
           <article class="card">
-            <h3 class="card__title title-decor">Многозадачность</h3>
+            <h3 class="card__title title-decor">Концентрация</h3>
             <p class="card__text">
-              Как концентрация может снижаться из-за… многозадачности?
-              Причём тут определение многозадачности совсем другое. Здесь
-              мы говорим не о том, сколько дел вам нужно сделать за
-              день, а о количестве вещей, на которые вы обращаете
-              внимание одновременно. Мультитаскинг заставляет мозг
-              постоянно переключаться. Он не может запомнить важные
-              вещи, потому что ему приходится всё время забывать
-              то, над чем он только что работал, чтобы хранить то, на
-              что переключился. И чтобы вернуться к задаче после
-              переключения, мозг тратит дополнительные ресурсы.
-              В&nbsp;итоге ни одно дело не может получить все
-              100% мощности мозга.
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+              мозг постоянно «сканировать» окружающую среду на предмет опасности.
+              Например, читать новости вместо работы. Но быть собранными всё
+              время — невозможно. Концентрация — мышца, и она может не выдержать,
+              если не давать ей отдохнуть.
             </p>
           </article>
           <article class="card">
             <h3 class="card__title title-decor">Еда</h3>
             <p class="card__text">
-              «Быстрые углеводы» — Pro или no?
-              Да, те самые, что в белом хлебе, сладостях, белом рисе,
-              кондитерских изделиях, — дают мгновенный скачок
-              глюкозы, который так же быстро проходит и вызывает
-              усталость и сонливость. Постоянные скачки сахара
-              приводят к тому, что мозг устаёт и уже не может
-              нормально работать. К тому же, глюкоза — это один
-              из основных источников энергии для мозга. Когда
-              мы едим много быстрых углеводов, уровень глюкозы
-              постоянно скачет, и мозг не может нормально
-              использовать её для работы.
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
             </p>
           </article>
           <article class="card">
             <h3 class="card__title title-decor">Гаджеты</h3>
             <p class="card__text">
-              Да, те самые, которые так и норовят залезть в ваш мозг
-              и украсть внимание. Есть статьи и исследования, которые
-              говорят, что залипание в телефон приводит к тому, что мозг
-              работает хуже. Потому что он постоянно переключается
-              между разными задачами, и из-за этого быстрее устаёт.
-              К тому же, экраны гаджетов излучают синий свет, который
-              может нарушить ваши биоритмы, то есть механизмы
-              организма, связанные со сменой дня и ночи. Результат
-              — сложности с засыпанием. И конечно, как следствие,
-              усталость и сниженная концентрация.
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с одной
+              задачи на другую — и просто не может. А чтобы вернуться к состоянию
+              полной концентрации, человеку в среднем нужно 20 минут. Вот и
+              получается, что чем больше времени мы проводим в гаджетах, тем
+              больше времени затем нужно, чтобы вернуться к работе.
             </p>
           </article>
         </div>
       </section>
       <section class="section section-how">
         <h2 class="section__title">
-          Как концентрироваться лучше, чем золотая рыбка (да, те самые 8
-          секунд)
+          Как концентрироваться лучше, чем золотая рыбка (да, те самые 8 секунд)
         </h2>
         <div class="section__cards">
           <article class="card">
@@ -172,10 +148,14 @@
               Представьте небо и облака
             </h4>
             <p class="card__text">
-              Или море, лес, степь.
-              Да что угодно. Мысленно представьте объект и
-              сфокусируйтесь на нём полностью. Детально переберите
-              все свойства предмета.
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
             </p>
           </article>
           <article class="card">
@@ -183,14 +163,10 @@
               Включите музыку
             </h4>
             <p class="card__text">
-              Но не любую, а ту, что без слов. А ещё лучше — определённый
-              жанр. Послушайте исследование «
-              <a
-                class="card__link"
-                href="https://www.cell.com/heliyon/fulltext/S2405-8440(24)04669-5"
-                target="_blank"
-                >Music for programming</a
-              >».
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
           </article>
           <article class="card">
@@ -198,10 +174,18 @@
               Прогуляйтесь
             </h4>
             <p class="card__text">
-              Или даже пробежаться. Погуляйте вокруг дома,
-              выйдите на улицу, дойдите до парка, до ближайшего
-              водоёма. Ходьба помогает мозгу «перезагрузиться» и
-              даёт новый приток кислорода — а значит, и энергии.
+              Или даже пробегитесь. Лучше найти парк или лес: один
+              <a
+                class="card__link"
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494408000650"
+                target="_blank"
+                >эксперимент</a
+              >
+              показал, что созерцание природы повышает концентрацию, в то время
+              как после просмотра городских пейзажей она наоборот понижается.
+              Можно совместить прогулку с физическими упражнениями или бегом —
+              так в мозг поступит ещё больше кислорода и он будет лучше работать.
+              Но и простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
           <article class="card">
@@ -209,11 +193,10 @@
               Хорошо ешьте
             </h4>
             <p class="card__text">
-              Мы — то, что мы едим. Поэтому убедитесь, что начинаете свой
-              день с питательного завтрака, а в течение дня получаете
-              достаточно питательных веществ. Если вам нужен перекус на
-              работе, лучше выберите фрукт или орехи, чем печенье или
-              конфету.
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
           <article class="card">
@@ -221,9 +204,10 @@
               Читайте
             </h4>
             <p class="card__text">
-              Настоящие бумажные книги. Это тренировка для мозга.
-              Чем больше вы читаете — тем лучше. Если
-              читать перед сном, это ещё помогает заснуть.
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
             </p>
           </article>
         </div>
