fix: restore correct text content per assignment specs
- section-what first card title: Концентрация → Многозадачность
- section-how h2: (да, те самые 8 секунд) → (то есть дольше трёх секунд)

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__cards">
           <article class="card">
-            <h3 class="card__title title-decor">Концентрация</h3>
+            <h3 class="card__title title-decor">Многозадачность</h3>
             <p class="card__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
@@ -135,7 +135,7 @@
       </section>
       <section class="section section-how">
         <h2 class="section__title">
-          Как концентрироваться лучше, чем золотая рыбка (да, те самые 8 секунд)
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
         <div class="section__cards">
           <article class="card">
