--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">
-        Что делать, когда не можешь делать ничего
+        Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
