--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
             </h4>
             <p class="card__text">
               Или даже пробегитесь. Лучше найти парк или лес: один
+              эксперимент
               <a
                 class="card__link"
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494408000650"
                 target="_blank"
-                >эксперимент</a
-              >
-              показал, что созерцание природы повышает концентрацию, в то время
+                >показал</a
+              >, что созерцание природы повышает концентрацию, в то время
               как после просмотра городских пейзажей она наоборот понижается.
               Можно совместить прогулку с физическими упражнениями или бегом —
               так в мозг поступит ещё больше кислорода и он будет лучше работать.
